--- a/Settings.ini
+++ b/Settings.ini
@@ -1,4 +1,6 @@
 [Settings]
 Interval=5000
-PingURL=google.com
+PingTargets=google.com,8.8.8.8,1.1.1.1
+PingTimeout=5000
+DNSTestHost=www.google.com
 VoiceAlerts=1
